# WindowsInternalsSuite

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README  README.md
cmake/: CompilerOptions.cmake  CompilerWarnings.cmake  Dependencies.cmake  Packaging.cmake  StaticAnalysis.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/common/error/: ErrorCode.hpp  Result.hpp  SystemError.hpp
src/common/include/common/io/: MappedFile.hpp
src/common/include/common/log/: ILogger.hpp  LogLevel.hpp  Logger.hpp
src/common/include/common/raii/: ScopedPrivilege.hpp  UniqueHandle.hpp  UniqueLocalMem.hpp  UniqueVirtualAlloc.hpp
src/common/include/common/text/: Encoding.hpp  HexFormat.hpp
src/common/include/common/util/: ByteSpan.hpp
src/common/src/error/: ErrorCode.cpp  SystemError.cpp
src/common/src/io/: MappedFile.cpp
src/common/src/log/: Logger.cpp
src/common/src/raii/: ScopedPrivilege.cpp
src/common/src/text/: Encoding.cpp  HexFormat.cpp
src/core/: CMakeLists.txt
src/core/include/core/detail/: SnapshotWalk.hpp
src/core/include/core/handle/: HandleInfo.hpp  HandleManager.hpp  IHandleManager.hpp  ObjectTypeTable.hpp
src/core/include/core/heap/: HeapInfo.hpp  HeapInspector.hpp  IHeapInspector.hpp
src/core/include/core/memory/: IMemoryManager.hpp  MemoryManager.hpp  MemoryRegion.hpp  SignatureScanner.hpp
src/core/include/core/module/: FileMetadata.hpp  IModuleManager.hpp  ModuleInfo.hpp  ModuleManager.hpp
src/core/include/core/pe/: PEDirectories.hpp  PEExports.hpp  PEFile.hpp  PEHeaders.hpp  PEImports.hpp  PEParser.hpp  PEResources.hpp  PESection.hpp
src/core/include/core/pe/detail/: PEReader.hpp
src/core/include/core/pebteb/: IPebTebReader.hpp  PebInfo.hpp  PebTebReader.hpp  TebInfo.hpp
src/core/include/core/process/: IProcessManager.hpp  ProcessInfo.hpp  ProcessManager.hpp
src/core/include/core/symbols/: ISymbolResolver.hpp  SymbolResolver.hpp
src/core/include/core/system/: ISystemInfoProvider.hpp  SystemInfo.hpp  SystemInfoProvider.hpp
src/core/include/core/thread/: IThreadManager.hpp  ThreadInfo.hpp  ThreadManager.hpp
src/core/include/core/token/: ITokenInspector.hpp  TokenInfo.hpp  TokenInspector.hpp
src/core/src/handle/: HandleManager.cpp  ObjectTypeTable.cpp
src/core/src/heap/: HeapInspector.cpp
src/core/src/memory/: MemoryManager.cpp  SignatureScanner.cpp
src/core/src/module/: FileMetadata.cpp  ModuleManager.cpp
src/core/src/pe/: PEDirectories.cpp  PEExports.cpp  PEImports.cpp  PEParser.cpp  PEResources.cpp
src/core/src/pebteb/: PebTebReader.cpp
src/core/src/process/: ProcessManager.cpp
src/core/src/symbols/: SymbolResolver.cpp
src/core/src/system/: SystemInfoProvider.cpp
src/core/src/thread/: ThreadManager.cpp
src/core/src/token/: TokenInspector.cpp
src/ntapi/: CMakeLists.txt
src/ntapi/include/ntapi/: DebugBuffer.hpp  INativeApi.hpp  NtDll.hpp  NtStatus.hpp  NtTypes.hpp  ObjectInformation.hpp  ProcessInformation.hpp  SystemInformation.hpp  ThreadInformation.hpp  VirtualMemory.hpp
src/ntapi/include/ntapi/detail/: QueryBuffer.hpp
src/ntapi/src/: DebugBuffer.cpp  NativeApi.cpp  NtDll.cpp  ObjectInformation.cpp  ProcessInformation.cpp  SystemInformation.cpp  ThreadInformation.cpp  VirtualMemory.cpp
src/ui/: CMakeLists.txt
src/ui/include/ui/detail/: CpuSampler.hpp  Format.hpp
src/ui/include/ui/interfaces/: IView.hpp  IViewModel.hpp
src/ui/include/ui/viewmodels/: ProcessExplorerVM.hpp  ThreadExplorerVM.hpp
src/ui/src/viewmodels/: ProcessExplorerVM.cpp  ThreadExplorerVM.cpp
